--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="./desktop-wallpaper-doge-background-banana-doge-majestic-doge-and-mlg-doge.jpg" alt="">
-    <h1>Follow Your Dreams</h1>
+    <div class="poster">
+        <img src="./desktop-wallpaper-doge-background-banana-doge-majestic-doge-and-mlg-doge.jpg" alt="">
+        <h1>Follow Your Dreams</h1>
+    </div>
 </body>
 </html>
